--- a/vignettes/BenHamou03.rmd
+++ b/vignettes/BenHamou03.rmd
@@ -1,5 +1,5 @@
 ---
-title: "Vignette for 'cir' Package"
+title: "Vignette for `cir` Package"
 subtitle: "Using Up-and-Down data from Benhamou et al. (2003)"
 author: "Assaf Oron"
 date: "`r Sys.Date()`"
@@ -24,13 +24,19 @@ knitr::opts_chunk$set(
 )
 ```
 
-## Background
+## Overview
 
-We demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al.^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou.^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here we re-analyze them again using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package. For a general up-to-date overview of up-and-down designs, see Oron et al. 2022.^[Oron AP, Souter MJ, Flournoy N. Understanding Research Methods: Up-and-down Designs for Dose-finding. *Anesthesiology* 2022; 137:137–50. See also the online supplement.] 
+I demonstrate the `cir` package with data from the anesthesiology experiment of Benhamou et al. (2003)^[Benhamou D, Ghosh C, Mercier FJ. A Randomized Sequential Allocation Study to Determine the Minimum Effective Analgesic Concentration of Levobupivacaine and Ropivacaine in Patients Receiving Epidural Analgesia for Labor. Anesthesiology. 2003;99(6):1383-1386.]. This experiment used the Up-and-Down (UD) dose-finding design, and was re-analyzed a few years later by Pace and Stylianou (2007).^[Pace NL, Stylianou MP. Advances in and Limitations of Up-and-down Methodology: A Précis of Clinical Use, Study Design, and Dose Estimation in Anesthesia Research. Anesthesiology. 2007;107(1):144-152.] Here we re-analyze them again using state-of-the-art Centered Isotonic Regression (CIR),^[Oron AP, Flournoy N. Centered Isotonic Regression: Point and Interval Estimation for Dose-Response Studies. Stat Biopharm Res. 2017;9(3):258-267.] the core estimator found in our package. 
 
-The study randomized women in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and test whether they are different. The original study used a "traditional" dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$‘s, and hence the difference in potency, was not significant. To derive inference about this difference, they apparently used the standard errors of the dose averages in a $t$-test like manner.
+Up-and-down data analysis was the original motivation for developing CIR and `cir`; however, the package is compatible with any binary-outcome dose-response dataset. For a general up-to-date overview of up-and-down designs, see Oron et al. 2022.^[Oron AP, Souter MJ, Flournoy N. Understanding Research Methods: Up-and-down Designs for Dose-finding. *Anesthesiology* 2022; 137:137–50. See also the online supplement.] If your interest is mainly in UD data analysis, then I have a dedicated UD package called `upndown` in "advanced Beta" stage (as of Spring 2023). It includes wrappers for simple, single-command plotting and estimation of UD datasets, using `cir` package functions. You can download that package using `remotes::install_github(assaforon/upndown)`.
 
-Pace and Stylianou re-analyzed the data using isotonic regression (IR) and 83% bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis. ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger and statistically significant difference between the two ED$_{50}$‘s. Per their estimates, levobupivacaine was 37% more potent.
+The vignette below provides a more detailed overview of CIR estimation and preliminary data preparation.
+
+## The Study
+
+Benhamou et al. randomized women in labor into two groups, receiving as analgesic either ropivacaine or levobupivacaine, to estimate each agent’s median effective dose (ED$_{50}$) for this condition, and to test whether there is significant difference in median efficacy. The original study used a "traditional" UD dose-averaging estimation method, concluding that even though levobupivacaine seemed 19% more potent, the difference between ED$_{50}$ was not significant. To derive inference about this difference, they apparently used the standard errors of the dose averages in a $t$-test like manner.
+
+Pace and Stylianou re-analyzed the data using isotonic regression (IR) and 83% bootstrap confidence intervals (CIs); under certain assumptions, examining whether these CIs overlap is equivalent to rejecting the Null hypothesis with $\alpha = 0.05.$ ^[Payton ME, Greenstone MH, Schenker N. Overlapping confidence intervals or standard error intervals:  What do they mean in terms of statistical significance? J Insect Sci. 2003;3(1).] They found a larger and statistically significant difference between the two ED$_{50}$‘s. Per their estimates, levobupivacaine was 37% more potent.
 
 Here we revisit this experiment yet again. To reduce some confusion, we drop the percent sign from description of the doses used (they are given as concentrations in percent in the original).
 
@@ -39,12 +45,9 @@ Here we revisit this experiment yet again. To reduce some confusion, we drop the
 Since UD datasets are rather compact, adding the data takes no more than 2-3 lines of code. But you can also use `.csv` file input if preferred, with two columns headed “x” and “y”. We do not have the original data table, nor do the original authors have access to it anymore; but we can read the sequence of administered doses off of Benhamou et al.’s Figure 1. 
 
 
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
 ```{r data}
 # For brevity, we initially use integers to denote the doses. 
-# We make use of R’s shorthand for consecutive sequences, 
-# e.g., 1:3 is really 1,2,3
+
 xropi = c(11:9,10:8,9,10,9,10:7,8:11,10:12,11:7,8,7:10,9,8,9,8:10,9,10,9,10)
 xlevo = c(11,10,11,10,11:9,10:7,8,7,8:5,6:8,7,8:6,7,6,7,6,7:5,6,7,6:12)
 ```
@@ -70,9 +73,9 @@ legend('bottomright',legend=c('Effective','Ineffective'),pch=c(19,1),bty='n')
 plot(bhamou03levo, ylim=doserange, ylab="Concentration (%)", main='Levobupivacaine Arm')
 ```
 
-The "traditional" estimates in the original articles, just used some type of average of the doses administered (the $y$ values in these plots). This is based on the premise that up-and-down designs concentrate these doses roughly symmetrically around the target percentile.
+The "traditional" estimates in the original articles, just used some type of average of the doses administered. This is based on the premise that over time, up-and-down designs concentrate these doses roughly symmetrically around the target percentile.
 
-However, generally these estimates are rather outdated and lack robustness. CIR is recommended as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
+However, generally the "traditional" estimates are rather outdated and lack robustness. CIR is recommended as the standard estimator for up-and-down experiments (see e.g., [Oron et al. 2022 supplement (pdf link)](https://cdn-links.lww.com/permalink/aln/c/aln_2022_05_25_oron_aln-d-21-01101_sdc1.pdf)).
 
 ## Dose-Response Plain and ED$_{50}$ Estimates
 
@@ -85,7 +88,7 @@ knitr::kable(bhamou03ropiRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 knitr::kable(bhamou03levoRates, row.names=FALSE,align='ccr',digits=c(2,4,0))
 ```
 
-Let us visualize the response frequencies on **the dose-response plain, which is "where CIR estimation action happens."**
+Let us visualize the response frequencies on **the dose-response plane, which is "where CIR estimation action happens."**
 *(and likewise for any regression-based estimation of dose-response data)* 
 
 Just like the plots above, the plots below are "native" CIR methods for `doseResponse` objects.
@@ -106,11 +109,11 @@ abline( h=0.5, col='purple', lty=2)
 
 NOTE: symbol area is proportional to the number of observations at each dose. To change to fixed-size, use `varsize=FALSE`.
 
-Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response region, so the target seems to lie between concentrations $0.09$ and $0.10$. 
+Target-dose estimation via regression is an [**"Inverse Problem"**](https://en.wikipedia.org/wiki/Inverse_problem): we draw a line at the desired $y$ value (in this case, $50\%$ or 0.5, marked in purple), and look for the best-fitting $x$ value. With the Ropivacaine arm data (left), there's a relatively clear transition between low-response and high-response region, so the target seems to lie between concentrations $0.09$ and $0.10$. We cannot be very confident of that, given the limited sample of binary observations - but at least there's a clear candidate. 
 
-With Levobupivacaine data (right) the picture is far more murky. Concentrations $0.07$ and $0.08$ go above $50$ response, but  $0.09$ and $0.10$ go back below that level! As we visualize near the end, CIR helps clear that murky picture via the simplest pooled response-rate averages that makes the overall dose-response curve obey monotonicity.
+With Levobupivacaine data (right) the picture is far more murky. Concentrations $0.07$ and $0.08$ go above $50\%$ response, but  $0.09$ and $0.10$ go back below that level! As we visualize near the end, CIR helps clear that murky picture via the simplest pooled response-rate averages that makes the overall dose-response curve obey monotonicity.
 
-But before going behind the scenes, from the `doseResponse` object, CIR estimation of $F(x)$  is only one step away:
+But before going behind the scenes: from the `doseResponse` object, CIR estimation of $F(x)$  is only one step away.
 
 ```{r fcir}
 quickIsotone(bhamou03ropiRates, target=0.5, adaptiveShrink=TRUE)
@@ -131,9 +134,9 @@ You can also do the estimation single-step from the `x, y` data; the functions w
 ### Notes
  - The target-dose estimate appears under the word `point`: `r round(ropiTargetCIR$point, 4)` for ropivacaine and `r round(levoTargetCIR$point, 4)` for  levobupivacaine.
  - We specify the target as a fraction, via the `target` argument.
- - Default CIs are 90% rather than 95%, due to the large variabily in these typical small-sample experiments. To change it use the `conf` argument.
- - The `adaptiveShrink` option performs an empirical correction the bias induced by the adaptive design, a bias discovered and described recently by Flournoy and Oron.^[Flournoy N, Oron AP. Bias induced by adaptive dose-finding designs. J Appl Stat. 2020;47(13-15):2431-2442.] It is induced not just by UD designs, but also by model-based designs such as the Continual Reassessment Method. **Because of this bias, we strongly recommend to *not* estimate any target except 0.5 from these data, except for exploratory/illustrative purposes.** The correction serves mostly to provide better CI coverage for the target dose estimate.
- - In an experiment with non-median targets such as the ED$_{90}$, we recommend adding the option `adaptiveCurve=TRUE` to the command above. This broadens the confidence intervals a bit to ensure proper coverage, which is more challenging the closer the target gets to the edge of the dose-response curve.
+ - Default CIs are 90% rather than 95%, due to the large variability and limited confidence in these typically small-sample experiments. To change it use the `conf` argument.
+ - The `adaptiveShrink` option performs an empirical correction of the bias induced by the adaptive design, a bias discovered and described recently by Flournoy and Oron.^[Flournoy N, Oron AP. Bias induced by adaptive dose-finding designs. J Appl Stat. 2020;47(13-15):2431-2442.] This type of bias is induced not just by UD designs, but also by model-based adaptive designs such as the Continual Reassessment Method. **Because of this bias, we strongly recommend to *not* estimate any target except 0.5 *(or a value very close to 0.5)* from these data, except for exploratory/illustrative purposes.** The correction serves mostly to provide better CI coverage for the target dose estimate.
+ - In an experiment with non-median targets such as the ED$_{90}$, we recommend adding the option `adaptiveCurve=TRUE` to the command above. This broadens the confidence intervals a bit ore to ensure proper coverage, which is more challenging the closer the target gets to the edge of the dose-response curve.
  
 Let us calculate 83% CIs, to evaluate the evidence for different potencies via the overlapping-intervals method.
 
@@ -144,11 +147,11 @@ levo83 = quickInverse(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, conf=0
 levo83
 ```
 
-Paradoxically, despite using a point-estimation method very close to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap, suggesting no evidence for a difference in potency** at the $\alpha=0.05$ level. Conversely, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  
+Paradoxically, despite using a point-estimation method very close to Pace and Stylianou's (CIR is a minor upgrade of IR), we reach a conclusion similar to the original authors: **the 83% confidence intervals do overlap, in fact they fully overlap - suggesting no evidence for a difference in potency** at the $\alpha=0.05$ level. 
 
-**Where we part ways with Pace and Stylianou - dramatically - are indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work for intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
+Interestingly, our point estimates are very similar to the Pace-Stylianou reanalysis, and so is our estimated levo/ropi potency ratio (1.37, quite a bit higher than Benhamou et al.’s 1.19).  **Where we part ways with Pace and Stylianou - dramatically - are indeed the confidence intervals for which our method is quite different.** Pace and Stylianou used an adaptation of the bootstrap, whereas we use an analytical approach based on Morris’ theoretical work with intervals for datasets with monotone dose-response data,^[Morris MD. Small-Sample Confidence Limits for Parameters under Inequality Constraints with Application to Quantal Bioassay. Biometrics. 1988;44:1083-1092.] the Delta method, and additional modifications to adapt to typical dose-finding data limitations.
 
-Looking in more detail at the numbers, the two confidence limits with the biggest difference are the ones where the overlap occurs *(or doesn't occur per Pace and Stylianou)*. Their $83\%$ LCL for Ropivacaine is $0.087$ - only 0.6 of a dose interval below their point estimate  - whereas ours is $0.079$, nearly 1.5 intervals below our point estimate. Even more dramatic is the difference between Levobupivacaine $83\%$ UCLs: $0.081$ (1.3 intervals above point-estimate) vs. $0.109$ (a full 4 intervals above that estimate).  
+Looking in more detail at the two confidence limits with the biggest difference between our method and the boostrap: their $83\%$ LCL for Ropivacaine is $0.087$ - only 0.6 of a dose interval below their point estimate  - whereas ours is $0.079$, nearly 1.5 intervals below our point estimate. Even more dramatic is the difference between Levobupivacaine's $83\%$ UCLs: $0.081$ (1.3 intervals above point-estimate) vs. $0.109$ (a full 4 intervals above that estimate).  
 
 Conceptually, the bootstrap CIs appear unrealistically narrow given the amount of information available - only 39 binary observations spread over several doses. By the way, we can use the same `quickInverse()` function to reproduce the Pace-Stylianou *point* estimates (but not the CIs, since `cir` does not implement the bootstrap approach):
 
@@ -162,7 +165,7 @@ PSlevoEstimate
 
 Note the argument specifying the `oldPAVA()` estimation function (PAVA is the name of the leading algorithm to produce IR estimates; the package default is `cirPAVA()`, i.e., CIR). 
 
-Let us visualize more clearly the argument for wider intervals from this dataset.
+Let us visualize more clearly the CIR estimates, and the argument for wider intervals from this dataset.
 
 ## Visualizing CIR on the Dose-Response Plane
 
@@ -175,12 +178,12 @@ levoCurveIR = oldPAVA(bhamou03levoRates, full=TRUE)
 levoCurveCIR = cirPAVA(bhamou03levoRates, target=0.5, adaptiveShrink=TRUE, full=TRUE)
 ```
 
-Each of these returns a list of three `doseResponse` objects. Here's one of the lists:
+With `full=TRUE`, each of these returns a list of three `doseResponse` objects. Here's one of the objects:
 ```{r forward2}
 levoCurveCIR
 ```
 
-`$output` is the estimates at the original doses *(which is what `quickIsotone()` returns sans the CIs)*, `$input` is the incoming data, and `$shrinkage` is the output at the doses where the algorithm makes the pooled estimates (then interpolated to generate `$output`) - i.e., `$shrinkage` is the actual regression curve found by the algorithm. With `oldPAVA()`, this component will always be identical to `$output`.
+`$output` is the estimates at the original doses *(which is what `quickIsotone()` returns sans the CIs)*, `$input` is the incoming data, and `$shrinkage` is the output at the doses where the algorithm makes the pooled estimates (then interpolated to generate `$output`) - i.e., **`$shrinkage` is the actual regression curve found by the algorithm.** With `oldPAVA()`, this component will always be identical to `$output`.
 
 We end with the dose-response plots, the regression curves and the target estimates, with the two arms arranged vertically to help visualize the CI overlap.
 
@@ -220,13 +223,13 @@ lines(c(0.059, 0.081), rep(0.49,2))
 
 ### Notes
 
- - The 2007 CIs were shifted slightly downward to make them visible.
- - Referring back to the "murky" picture around target in the Levobupivacaine dose-response plots, we see that both IR (black dashes) and CIR (solid blue) pool the observations from $x = 0.08, 0,09, 0.10$ into a single weighted average, which is only slightly higher than the observation at $x = 0.07$ (the main difference is that IR creates a flat "stretch" whereas CIR pools into a single point on the dose-response plain). So these nonparametric algorithms *"convert the murkiness"* into concluding (with very limited confidence, given the overall small $n$) that **$F(x)$ is very shallow for a long stretch right above the $y = 0.5$ target response rate.**
+ - The 2007 CIs were shifted slightly downward in the plot, to make them visible.
+ - Referring back to the "murky" picture around target in the Levobupivacaine dose-response plots, we see that both IR (black dashes) and CIR (solid blue) pool the observations from $x = 0.08, 0,09, 0.10$ into a single weighted average, which is only slightly higher than the observation at $x = 0.07.$ The main difference is that IR creates a flat "stretch" with that pooled $y$ value, whereas CIR also pools along the $x$ axis into a single point on the dose-response plane. So both these nonparametric algorithms *"convert the murkiness"* into concluding (with very limited confidence, given the overall small $n$) that **$F(x)$ is very shallow for a long stretch, right above the $y = 0.5$ target response rate.**
  
  - We see how the CIR intervals stretch to accommodate this shallowness. Indeed, **our confidence-interval method for inverse estimation is driven by local slope around target**, which we believe is the more correct approach.
- - Take in particular the"Levobupivacaine plot at $x = 0.10$. The CIR estimate of $F(x)$ there is `r round(levoCurveCIR$output$y[6], 3)`. The IR estimate which is what Pace and Stylianou used to inform their bootstrap, is `r round(levoCurveIR$output$y[6], 3)` - even closer to the $50\%$ study target-rate, and statistically indistinguishable from it at these sample sizes. Yet, $0.010$ lies not only outside the bootstrap $83\%$ CI, but also outside the bootstrap $95\%$ CI (which is $0.058, 0.095$). This suggests that the bootstrap intervals are substantially too short.
- - Prior to `cir` package version 2.3.0, the estimated slope informing the CI was the same to the right and left of target, and hence CIs were usually near-symmetric. We now estimate different *"left"* and *"right"* slopes. To revert to single-slope version, use the argument `slopeImprovement = FALSE` in your `quickInverse()` call.  
- - In this demonstration the CIR curves differ from the ordinary IR curves not only in the CIR algorithm that “shrinks” horizontal intervals to single points, but also in the bias correction found by Flournoy and Oron (2020). In principle this correction is compatible with both methods, but here we applied it only to CIR, because it did not exist at the time of Pace and Stylianou’s article.
+ - Take in particular the Levobupivacaine plot at $x = 0.10$. The CIR estimate of $F(x)$ there is `r round(levoCurveCIR$output$y[6], 3)`. The IR estimate which is what Pace and Stylianou used to inform their bootstrap, is `r round(levoCurveIR$output$y[6], 3)` - even closer to the $50\%$ study target-rate, and statistically indistinguishable from it at these sample sizes. Yet, $0.10$ lies not only outside the bootstrap $83\%$ CI, but also outside the bootstrap $95\%$ CI (which is $0.058, 0.095$). This suggests that the bootstrap intervals are substantially too short.
+ - Prior to `cir` package version 2.3.0, the estimated slope informing the CI was the same to the right and left of target, and hence CIs were usually near-symmetric *(and in this particular example, much shorter)*. We now estimate different *"left"* and *"right"* slopes. To revert to single-slope version, use the argument `slopeImprovement = FALSE` in your `quickInverse()` call.  
+ - In this demonstration the CIR curves differ from the ordinary IR curves not only in the CIR algorithm that “shrinks” horizontal intervals to single points, but also in the bias correction found by Flournoy and Oron (2020) and mentioned earlier. In principle this correction is compatible with both methods, but here we applied it only to CIR, because it did not exist at the time of Pace and Stylianou’s article.
 
 
 ## References
